<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/abouttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/select_picture"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@color/orange"
        app:layout_constraintBottom_toTopOf="@+id/yourpic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abouttext" />

    <ImageView
        android:id="@+id/yourpic"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:contentDescription="@string/default_pic"
        android:scaleType="fitCenter"
        android:src="@drawable/pic001"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abouttext" />

    <View
        android:id="@+id/view2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/line"
        app:layout_constraintBottom_toTopOf="@+id/btn_from_galery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourpic" />

    <Button
        android:id="@+id/btn_from_galery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/layout_text_orange"
        android:drawableStart="@android:drawable/ic_menu_gallery"
        android:drawableLeft="@android:drawable/ic_menu_gallery"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:text="@string/from_gallery"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourpic"
        tools:ignore="RtlSymmetry" />

    <View
        android:id="@+id/view3"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@color/line"
        app:layout_constraintBottom_toTopOf="@+id/btn_from_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_from_galery" />

    <Button
        android:id="@+id/btn_from_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/layout_text_orange"
        android:drawableStart="@android:drawable/ic_menu_camera"
        android:drawableLeft="@android:drawable/ic_menu_camera"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:text="@string/take_a_picture"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_from_galery"
        tools:ignore="RtlSymmetry" />

    <View
        android:id="@+id/view4"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@color/line"
        app:layout_constraintBottom_toTopOf="@+id/btn_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_from_camera" />

    <Button
        android:id="@+id/btn_default"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/layout_text_orange"
        android:drawableStart="@android:drawable/ic_menu_my_calendar"
        android:drawableLeft="@android:drawable/ic_menu_my_calendar"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:text="@string/default_pic"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_from_camera"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/layout_cancel"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_default" />

</androidx.constraintlayout.widget.ConstraintLayout>